RESOLVED FIXED101687
[EFL][WK2][AC] Random crashes in layout tests on the bot
https://bugs.webkit.org/show_bug.cgi?id=101687
Summary [EFL][WK2][AC] Random crashes in layout tests on the bot
Yael
Reported 2012-11-08 18:49:23 PST
Some crashes are seen on the bot. They could be a result of a race condition in which a load is committed before Evas sets the view size. In that case, we issue a call to update, but the size is still 0. A patch is coming. 17:58:20.492 12227 ASSERTION FAILED: !layerRect().isEmpty() 17:58:20.492 12227 /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp(173) : void WebCore::TextureMapperLayer::paintSelf(const WebCore::TextureMapperPaintOptions&) 17:58:20.492 12227 1 0x7f60aadcd453 WebCore::TextureMapperLayer::paintSelf(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 2 0x7f60aadcd709 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 3 0x7f60aadce04b WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 4 0x7f60aadce17d WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 5 0x7f60aadcd875 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 6 0x7f60aadce04b WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 7 0x7f60aadce17d WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 8 0x7f60aadcd875 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 9 0x7f60aadce04b WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 10 0x7f60aadce17d WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) 17:58:20.492 12227 11 0x7f60aadcd271 WebCore::TextureMapperLayer::paint() 17:58:20.492 12227 12 0x7f60a7867543 WebKit::LayerTreeRenderer::paintToCurrentGLContext(WebCore::TransformationMatrix const&, float, WebCore::FloatRect const&, unsigned int) 17:58:20.492 12227 13 0x7f60a7991250 EwkViewImpl::displayTimerFired(WebCore::Timer<EwkViewImpl>*) 17:58:20.493 12227 14 0x7f60a7997e20 WebCore::Timer<EwkViewImpl>::fired() 17:58:20.493 12227 15 0x7f60aad41cba WebCore::ThreadTimers::sharedTimerFiredInternal() 17:58:20.493 12227 16 0x7f60aad41bdb WebCore::ThreadTimers::sharedTimerFired() 17:58:20.493 12227 17 0x7f60ab72ace5 17:58:20.493 12227 18 0x7f60a6b4933e _ecore_timer_expired_call 17:58:20.493 12227 19 0x7f60a6b4950b _ecore_timer_expired_timers_call 17:58:20.493 12227 20 0x7f60a6b46421
Attachments
Patch (1.55 KB, patch)
2012-11-08 18:51 PST, Yael
no flags
Patch (1.67 KB, patch)
2012-11-09 04:17 PST, Sudarsana Nagineni (babu)
no flags
Yael
Comment 1 2012-11-08 18:51:40 PST
Kenneth Rohde Christiansen
Comment 2 2012-11-09 02:18:31 PST
Comment on attachment 173172 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=173172&action=review > Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:324 > + > + if (!(sd->view.w && sd->view.h)) > + return; > + comment please: // Guard for zero sized viewport.
Sudarsana Nagineni (babu)
Comment 3 2012-11-09 04:17:33 PST
Created attachment 173262 [details] Patch Let's land this patch quickly to make the bots green.
Raphael Kubo da Costa (:rakuco)
Comment 4 2012-11-09 04:24:06 PST
Comment on attachment 173262 [details] Patch Clearing flags on attachment: 173262 Committed r134049: <http://trac.webkit.org/changeset/134049>
Raphael Kubo da Costa (:rakuco)
Comment 5 2012-11-09 04:24:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.