[EFL][WK2][AC] Random crashes in layout tests on the bot https://bugs.webkit.org/show_bug.cgi?id=101687

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-11-09
Reviewed by Kenneth Rohde Christiansen.

Speculative fix for a crash on the bot.
If didCommitLoad() is called before the view size was set, we will
try to paint an empty area, and that will crash.

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::update):


Canonical link: https://commits.webkit.org/119835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134049 268f45cc-cd09-0410-ab3c-d52691b4dbfc